# rulesgen

./: README.md  rulesgen.cabal  stack.yaml
src/: Main.hs
src/RulesGen/: Gen.hs  Loader.hs  Parser.hs  Rules.hs
