name:                rulesgen
version:             0.1.0.0
synopsis:            SCIgen-inspired program for generating random text matching a grammar.
description:         Please see README.md
homepage:            http://github.com/arotenberg/rulesgen#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Aaron Rotenberg
maintainer:          adrotenberg (at) gmail.com
copyright:           2021 Aaron Rotenberg
category:            ACME
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable rulesgen
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       RulesGen.Gen
                     , RulesGen.Loader
                     , RulesGen.Parser
                     , RulesGen.Rules
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , cpphs
                     , MonadRandom
                     , optparse-applicative
                     , random
                     , transformers
  default-language:    Haskell2010
  other-extensions:    GeneralizedNewtypeDeriving

source-repository head
  type:     git
  location: https://github.com/arotenberg/rulesgen
